Fix card alignment

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ img {
 .dealer-cards {
   margin-top: 88px;
   display: flex;
+  margin-right: 20px;
   z-index: 1;
   flex-direction: row;
   align-items: center;
